--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,31 +8,24 @@ SET(CMAKE_EXE_LINKER_FLAGS  "-fsanitize=address -lm")
 
 
 add_executable(lab_hash main.c
-        hash_cep.c
-        hash_cep.h
-        hash_lin.c
-        hash_lin.h
-        func.c
+        hash_chain.c
+        hash_chain.h
+        hash_open_adress.c
+        hash_open_adress.h
 )
 
 add_executable(lab_hash_find
-        hash_cep.c
-        hash_cep.h
-        hash_lin.c
-        hash_lin.h
-        func.c
-        func.h
-        PerfectHashFind.c
-        PerfectHashFind.h
+        hash_chain.c
+        hash_chain.h
+        hash_open_adress.c
+        hash_open_adress.h
         find_main.c
         find_main.h)
 
 add_executable(lab_hash_random
-        hash_cep.c
-        hash_cep.h
-        hash_lin.c
-        hash_lin.h
-        func.c
-        func.h
+        hash_chain.c
+        hash_chain.h
+        hash_open_adress.c
+        hash_open_adress.h
         main_random.c)
 
