--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,44 +17,44 @@ add_custom_target(python
 )
 
 add_executable(lab_hash main.c
-        hash_chain.c
-        hash_chain.h
-        hash_open_adress.c
-        hash_open_adress.h
-        hash_lin.c
-        hash_lin.h
-        hash_quad_func.c
-        hash_quad_func.h
-        hash_two_func.c
-        hash_two_func.h
+        hash_chain/hash_chain.c
+        hash_chain/hash_chain.h
+        open_adress_hash/hash_open_adress.c
+        open_adress_hash/hash_open_adress.h
+        open_adress_hash/hash_lin.c
+        open_adress_hash/hash_lin.h
+        open_adress_hash/hash_quad_func.c
+        open_adress_hash/hash_quad_func.h
+        open_adress_hash/hash_two_func.c
+        open_adress_hash/hash_two_func.h
 )
 
 
 add_executable(lab_hash_find
-        hash_chain.c
-        hash_chain.h
-        hash_open_adress.c
-        hash_open_adress.h
-        Hash_Perfect.h
-        Hash_Perfect.c
+        hash_chain/hash_chain.c
+        hash_chain/hash_chain.h
+        open_adress_hash/hash_open_adress.c
+        open_adress_hash/hash_open_adress.h
+        Hash_Perfect/Hash_Perfect.h
+        Hash_Perfect/Hash_Perfect.c
         find_main.c
-        hash_lin.c
-        hash_lin.h
-        hash_quad_func.c
-        hash_quad_func.h
-        hash_two_func.c
-        hash_two_func.h)
+        open_adress_hash/hash_lin.c
+        open_adress_hash/hash_lin.h
+        open_adress_hash/hash_quad_func.c
+        open_adress_hash/hash_quad_func.h
+        open_adress_hash/hash_two_func.c
+        open_adress_hash/hash_two_func.h)
 
 add_executable(lab_hash_random
-        hash_chain.c
-        hash_chain.h
-        hash_open_adress.c
-        hash_open_adress.h
+        hash_chain/hash_chain.c
+        hash_chain/hash_chain.h
+        open_adress_hash/hash_open_adress.c
+        open_adress_hash/hash_open_adress.h
         main_random.c
-        hash_lin.c
-        hash_lin.h
-        hash_quad_func.c
-        hash_quad_func.h
-        hash_two_func.c
-        hash_two_func.h)
+        open_adress_hash/hash_lin.c
+        open_adress_hash/hash_lin.h
+        open_adress_hash/hash_quad_func.c
+        open_adress_hash/hash_quad_func.h
+        open_adress_hash/hash_two_func.c
+        open_adress_hash/hash_two_func.h)
 
